--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
-include ./mixins.pug
+include ./pug/mixins.pug
 
 <!DOCTYPE html>
 html(lang="en")
@@ -10,6 +10,15 @@ html(lang="en")
   body
     .wrapper
       .maincontent
-        +image('content/user.jpg', 'user-pic')
-        +icon('link', 'link-class')
-        .icon-bg
+        .temporarily
+          include ./pug/hero/hero
+          include ./pug/about/about
+        include ./pug/skills/skills
+        include ./pug/works/works
+        include ./pug/comments/comments
+        include ./pug/footer/footer
+
+
+        //+image('content/user.jpg', 'user-pic')
+        //+icon('link', 'link-class')
+        //.icon-bg
