--- a/src/styles/mixins.pcss
+++ b/src/styles/mixins.pcss
@@ -21,3 +21,12 @@
     @content;
   }
 }
+
+// colors
+$white: #fff;
+$orange: #dc9322;
+$beige: #716d69;
+$grey: #909293;
+$dark-blue: #353e4e;
+$link: #586ed3;
+$dark-grey: #656567;
