--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -24,6 +24,7 @@ body {
   overflow: hidden;
   min-height: 100%;
   position: relative;
+  background-color: #fff;
 }
 
 .container {
@@ -86,4 +87,15 @@ img {
   display: block;
   max-width: 100%;
   max-height: 100%;
+}
+
+.visuallyHidden{
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
