--- a/src/pug/menu.pug
+++ b/src/pug/menu.pug
@@ -1,7 +1,13 @@
 ul.menu
-  li.menu-item Главная
-  li.menu-item Обо нме
-  li.menu-item Навыки
-  li.menu-item Работы
-  li.menu-item Отзывы
-  li.menu-item Связаться
+  li.menu__item 
+    a(href="#") Главная
+  li.menu__item 
+    a(href="#") Обо нме
+  li.menu__item 
+    a(href="#") Навыки
+  li.menu__item 
+    a(href="#") Работы
+  li.menu__item 
+    a(href="#") Отзывы
+  li.menu__item 
+    a(href="#") Связаться
