--- a/src/pug/skills/skills.pug
+++ b/src/pug/skills/skills.pug
@@ -1,68 +1,6 @@
 section.skills
-  .container
+  .container.skills__container
     .skills__desc
       h4.skills__desc-title Чем я могу быть полезен вам
-      .skills__desc-text Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-    .skills__diagram
-      .diagram
-        .diagram__title Front-end
-        .diagram__group
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40" 
-              style="animation-delay: -10s"
-              ).circle.circle--above
-            .percentage__name HTML 5
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40"
-              style="animation-delay: -70s"
-              ).circle.circle--above
-            .percentage__name CSS3
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40"
-              style="animation-delay: -40s"
-              ).circle.circle--above
-            .percentage__name Javascript
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40"
-              style="animation-delay: -30s"
-              ).circle.circle--above
-            .percentage__name Jquery, Vue.js
-      .diagram
-        .diagram__title Workflow
-        .diagram__group
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40" 
-              style="animation-delay: -10s"
-              ).circle.circle--above
-            .percentage__name GIT
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40"
-              style="animation-delay: -70s"
-              ).circle.circle--above
-            .percentage__name Terminal
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40"
-              style="animation-delay: -40s"
-              ).circle.circle--above
-            .percentage__name Gulp
-          .diagram__group-item
-            svg.percentage(viewBox="0 0 100 100" preserveAspectRatio="none")
-              circle(cx="50" cy="50" r="40").circle.circle--under
-              circle(cx="50" cy="50" r="40"
-              style="animation-delay: -30s"
-              ).circle.circle--above
-            .percentage__name Webpack
+      .skills__desc-text.paragraph Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+    include ../diagram
