--- a/src/pug/welcome-section/about/about.pug
+++ b/src/pug/welcome-section/about/about.pug
@@ -1,5 +1,5 @@
 section.about
-  .container
+  .container.about__container
     .about-items
       .about__info
         +image('content/author.png', 'about__info-photo')
@@ -15,7 +15,7 @@ section.about
             td.about__info-desc 28 сентября 1993
 
       .about__desc
-        p.about__desc-text Привет, меня зовут
+        p.about__desc-text.paragraph Привет, меня зовут
         h3.about__desc-title Андрей Мартемьянов
-        p.about__desc-text  Я занимаюсь разработкой соверменных сайтов и приложений. Мне нравится делать интересные и современные проекты. 
+        p.about__desc-text.paragraph  Я занимаюсь разработкой соверменных сайтов и приложений. Мне нравится делать интересные и современные проекты. 
         p.about__desc-text.about__desc-text--note Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
