--- a/src/styles/blocks/autumn-section/autumn-section.pcss
+++ b/src/styles/blocks/autumn-section/autumn-section.pcss
@@ -1,19 +1,6 @@
-.comments{
-  position: relative;
+.autumn-section{
   background-image: linear-gradient( to right, rgba(34, 36, 37, .9) 0%,rgba(34, 36, 37, .9) 65%, rgba(34, 36, 37, .5) 100%), url('../images/content/comments-bg.jpg');
-  background-size: center center;
+  background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-
-
-  &__title{
-    padding-top: 150px;
-    font-size: 36px;
-    font-weight: 700;
-    color: $white;
-  }
-
-  &__form{
-    margin-top: 200px;
-  }
 }
