--- a/src/styles/blocks/works/works.pcss
+++ b/src/styles/blocks/works/works.pcss
@@ -2,27 +2,12 @@
   border-color: $white;
   position: relative;
 
-  &:after{
-    position: absolute;
-    display: block;
-    content: "2";
-    color: #e6e6e6;
-    font-size: 300px;
-    top: 23%;
-    left: 600px;
-    font-weight: 900;
-  }
-
-  &__title{
-    font-size: 36px;
-    font-weight: 700;
+  &__container{
     padding-top: 152px;
+    padding-bottom: 150px;
   }
 
-  &__content{
+  .works-slider{
     margin-top: 59px;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 150px;
   }
 }
