--- a/src/styles/blocks/comments__slider.pcss
+++ b/src/styles/blocks/comments__slider.pcss
@@ -1,12 +1,16 @@
-.comments__slider{
+.comments-slider{
   position: relative;
   display: flex;
-  
-  &-arrows{
-    position: absolute;
-    top: -44px;
-    left: 50%;
-    transform: translateX(-50%);
+  flex-direction: column;
+
+  .slider-head{
+    display: flex;
+  }
+  &__title{
+    color: $white;
+  }
+  &__arrows{
+    margin-left: 74px;
     width: 124px;
     display: flex;
     flex-direction: row-reverse;
@@ -65,13 +69,6 @@
     left: -113px;
   }
 
-  .slider__comment{
-    font-size: 16px;
-    line-height: 30px;
-    font-weight: 700;
-    color: $grey;
-  }
-
   .slider__author{
     margin-top: 24px;
     display: flex;
@@ -102,11 +99,60 @@
 
     &-info{
       p{
-        font-size: 16px;
         font-weight: 700;
         line-height: 30px;
         color: $dark-grey;
       }
+    }
+  }
+}
+
+@include tablets {
+  .comments-slider{
+
+    &__arrows{
+      margin-left: 30px;
+    }
+
+    .slider__content{
+      margin-top: 60px;
+      justify-content: space-between;
+
+      &-item{
+        margin-left: 30px;
+
+        .slider__quote{
+          left: -40px;
+          top: 3px;
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+  }
+}
+
+@include tabletsSmall{
+  .slider__author-pic{
+    width: 46px;
+    height: 46px;
+    margin: auto;
+  }
+}
+
+@include phones{
+  .comments-slider{
+    .slider-head{
+      flex-direction: column;
+      align-items: center;
+    }
+    &__title{
+      font-size: 24px;
+    }
+
+    &__arrows{
+      margin-left: 0;
+      margin-top: 30px;
     }
   }
 }
