--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -3,17 +3,30 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
+  .menu{
+    padding: 0 10px;
+  }
 
   .social{
-    width:165px;
+    width:14%;
+    min-width: 95px;
   }
 
-  &__logo{
-    color:$white;
-    font-size: 36px;
-    font-weight: 800;
-    cursor: default;
+  @include tablets{
+    .menu{
+      display: none;
+    }
+
+    .social{
+      margin-right: 115px;
+    }
   }
 
+  @include phones{
+    .social{
+      display: none;
+    }
+  }
 }
