--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,11 +1,13 @@
 .menu {
-  width: 690px;
+  width: 100%;
+  max-width: 690px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   color: $white;
 
-  &-item{
+  &__item{
     cursor: pointer;
     transition: .3s;
     &:hover{
