--- a/src/styles/blocks/social.pcss
+++ b/src/styles/blocks/social.pcss
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 25px;
 
   &__item{
     position: relative;
     cursor: pointer;
+    height: 25px;
     transition: .3s;
     &:hover{
       .social__item-link{
