--- a/src/styles/blocks/welcome-section/about/about.pcss
+++ b/src/styles/blocks/welcome-section/about/about.pcss
@@ -1,14 +1,22 @@
 .about{
-  height: 100vh;
+  min-height: 750px;
+
+  &__container{
+    min-height: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
   &-items{
-    margin-top: 40vh;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
   }
 
   &__info{
-    width: 30%;
+    max-width: 40%;
 
     &-photo{
       width: 200px;
@@ -18,7 +26,8 @@
     }
 
     &-table{
-      margin-top: 69px;
+      padding-top: 15%;
+      margin: auto;
     }
 
     &-item{
@@ -36,15 +45,9 @@
   }
 
   &__desc{
-    width: 60%;
-    max-width: 545px;
-    margin-left: 10%;
+    max-width: 50%;
 
     &-text{
-      line-height: 30px;
-      font-weight: 700;
-      line-height: 30px;
-      color: $grey;
 
       &--note{
         margin-top: 78px;
@@ -71,6 +74,54 @@
       margin-top: 16px;
       margin-bottom: 24px;
       width: 520px;
+    }
+  }
+}
+
+@include tablets{
+
+  .about__info-photo{
+    margin: unset;
+  }
+  .about__info-table{
+    margin: unset;
+  }
+  .about__info-desc{
+    padding-left: 20px;
+  }
+}
+
+@include tabletsSmall{
+  .about__info{
+    max-width: unset;
+  }
+  .about__info-desc{
+    padding-left: 90px;
+  }
+  .about__info-photo{
+    margin: auto;
+  }
+  .about__info-table{
+    margin: auto;
+  }
+  .about-items{
+    flex-direction: column;
+    align-items: center;
+  }
+  .about__container{  
+    padding-top: 80px;
+    padding-bottom: 100px;
+  }
+  .about__desc{
+    margin-top: 50px;
+    max-width: unset;
+  }
+}
+
+@include phones {
+  .about{
+    &__desc-title{
+      width: unset;
     }
   }
 }
