--- a/src/styles/blocks/hamburger.pcss
+++ b/src/styles/blocks/hamburger.pcss
@@ -83,12 +83,13 @@
 }
 
 .hamnurger-menu{
-  display: none;
+  display: block;
   position: fixed;
   height: 100vh;
   width: 44%;
-  right: 0;
+  right: -9999px;
   background-color: $white;
+  transition: .3s;
   z-index: 15;
 
   &__container{
@@ -116,21 +117,11 @@
 }
 
 .visible{
-  display: block;
+  right: 0;
 }
 
 @include phones {
   .hamnurger-menu{
     width: 100%;
-    .menu{
-      width: 84px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    .social{
-      width: 145px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
   }
 }
