--- a/src/index.pug
+++ b/src/index.pug
@@ -11,9 +11,8 @@ html(lang="ru")
     .wrapper
       .maincontent
         include ./pug/hamburger
-        .welcome-section
-          include ./pug/welcome-section/hero/hero
-          include ./pug/welcome-section/about/about
+        include ./pug/hero/hero
+        include ./pug/about/about
         include ./pug/skills/skills
         include ./pug/works/works
         .autumn-section
