--- a/src/pug/menu.pug
+++ b/src/pug/menu.pug
@@ -1,13 +1,6 @@
+- var menu = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы', 'Связаться']
 ul.menu
-  li.menu__item 
-    a(href="#") Главная
-  li.menu__item 
-    a(href="#") Обо нме
-  li.menu__item 
-    a(href="#") Навыки
-  li.menu__item 
-    a(href="#") Работы
-  li.menu__item 
-    a(href="#") Отзывы
-  li.menu__item 
-    a(href="#") Связаться
+  each item in menu
+    li.menu__item 
+      a(href="#") #{item}
+  
