--- a/src/index.pug
+++ b/src/index.pug
@@ -19,3 +19,5 @@ html(lang="ru")
           include ./pug/autumn-section/comments/comments
           include ./pug/autumn-section/contacts/contacts
         include ./pug/footer/footer
+      
+      include ./pug/entry/entry
