works-slider & parallax fixes

--- a/src/pug/hero/parallax.pug
+++ b/src/pug/hero/parallax.pug
@@ -4,7 +4,8 @@
   .parallax__layer(data-speed=".3")
     +image('content/parallax/2.png', 'parallax__img')
   .parallax__layer
-    h1.owner__title Андрей Мартемьянов
+    .parallax__title
+      h1.owner__title Андрей Мартемьянов
   .parallax__layer(data-speed=".4")
     +image('content/parallax/3.png', 'parallax__img')
   .parallax__layer(data-speed=".8")
